# ITS

./: .gitignore  LICENSE  docker-compose.yml  mosquitto.conf
.claude/: claude.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  labels.md
.github/ISSUE_TEMPLATE/: tech_debt.yml
.github/workflows/: stale.yml  tests.yml
diary/chore/: README.md
diary/fix/: README.md
diary/main/: 001-bootstrap-devops-readiness.md  001-dockerize-game-master.md  002-pr-checklist-and-label-strategy.md  003-src-backend-frontend-nextjs-structure.md  004-move-legacy-folders-under-src.md  005-cleanup-gitignore-and-diary-folders.md  006-polish-copilot-instructions-after-structure-changes.md
docs/: asyncapi.yaml  howto.md
docs/asyncapi-html/: index.html
docs/asyncapi-html/js/: app.js
docs/devops/: README.md  ci-cd-plan.md
src/: README.md
src/backend/: Dockerfile  README.md  game_master.py  game_state.json  pyproject.toml  questions.json
src/backend/tests/: test_scoring.py
src/firmware/: README.md
src/firmware/ALLEC_QUIZZ/: README.md  platformio.ini
src/firmware/ALLEC_QUIZZ/src/: main.cpp
src/firmware/Hotspot/src/: main.cpp
src/firmware/Joahatunrecht/: platformio.ini
src/firmware/Joahatunrecht/lib/WiiChuck-0.4.1/: library.properties
src/firmware/Joahatunrecht/src/: config.h.example  main.cpp
src/frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
src/frontend/src/app/: globals.css  layout.tsx  page.tsx
src/frontend/src/hooks/: useMqtt.ts  useSound.ts
src/frontend/src/types/: quiz.ts
(+12 files in other folders)
